[package]
name = "sigscan"
version = "0.1.0"
authors = ["William Venner <william@venner.io>"]
edition = "2018"

[dependencies]
sigscan-core = { path = "../sigscan_core" }
signature-macro = { path = "../signature_macro" }
obfstr = { version = "0.3.0", optional = true }

[features]
obfuscate = ["signature-macro/obfuscate", "obfstr"]
