[package]
name = "skidscan-core"
version = "0.1.0"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
publish = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "processthreadsapi", "psapi", "minwindef"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"