[package]
name = "skidscan-macros"
version = "0.1.1"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
license = "MIT"
description = "Proc macros for skidscan"
repository = "https://github.com/WilliamVenner/skidscan"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"

[features]
obfuscate = []
